Remove linux-suda preferred version
conf/machine/tele.conf

recipes-extended/images/core-image-full-cmdline.bbappend
    Add default user to sudo group.

--- a/conf/machine/tele.conf
+++ b/conf/machine/tele.conf
@@ -25,7 +25,7 @@ IMAGE_FSTYPES += "tar.bz2"
 SERIAL_CONSOLE = "115200 ttyO2"
 
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-suda"
-PREFERRED_VERSION_linux-suda ?= "4.4%"
+#PREFERRED_VERSION_linux-suda ?= "4.4%"
 
 # KERNEL_IMAGETYPE = "zImage"
 # KERNEL_DEVICETREE = "omap3-teledm.dtb"
